--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ django-celery-results==2.4.0
 django-jazzmin==2.5.0
 django-redis==5.2.0
 django-timezone-field==5.0
+dj-database-url
 fake-useragent==0.1.11
 feedparser==6.0.10
 flatbuffers==22.9.24
